--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/yingyingl/lyy-test-project/issues"
   },
-  "homepage": "https://github.com/yingyingl/lyy-test-project#readme"
+  "homepage": "https://github.com/yingyingl/lyy-test-project#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2"
+  }
 }
