--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "test",
   "main": "src/index.js",
   "scripts": {
+    "example": "http-server -p 8880",
+    "release": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,5 +29,9 @@
     "babel-preset-latest": "^6.24.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "http-server": "^13.0.2"
   }
 }
